- Add container configuration, so the app will generated in *.war

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 
   <groupId>id.co.blogspot.fathan</groupId>
   <artifactId>jwt-implementation</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <version>1.0.0</version>
+  <packaging>war</packaging>
 
   <name>jwt-implementation</name>
   <description>Demo project for Spring Boot</description>
@@ -42,6 +42,11 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-tomcat</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
@@ -58,6 +63,7 @@
   </dependencies>
 
   <build>
+    <finalName>jwt-implementation</finalName>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
