commit some component

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ wiremock.scheme=http
 wiremock.host=localhost
 wiremock.port=8090
 wiremock.directory=${MOCKAPP_DIR}/mockup
+# jsp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
